--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>THIRD RULE GAMES</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Third Rule Games</h1>
+<p>"Innovating where we shouldn't".</p>
 
 </body>
-</html> 
+</html>
