--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title><b>THIRD RULE GAMES</b></title>
+<title>THIRD RULE GAMES</title>
 <link rel="stylesheet" href="mainstyles.css">
 </head>
 <body>
 
-<h1>Third Rule Games</h1>
+<h1><b>Third Rule Games</b></h1>
 <p>"Innovating where we shouldn't".</p>
 
 </body>
