--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 
-<h1>Third Rule Games</h1>
-<p>"Innovating where we shouldn't".</p>
+
+
+<section class="header">
+  <h1>Third Rule Games</h1>
+  <p>"Innovating where we shouldn't".</p>
+  <a class="btn-bgstroke">Text 3</a>
+</section>
 
 </body>
 </html>
